# gerty

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  COMMANDS.md  HEARTBEAT.md  ONBOARDING.md  PERFORMANCE.md  README.md  SOUL.md  USER.md  gerty.desktop  pyproject.toml  requirements.txt
.clawhub/: lock.json
.learnings/: ERRORS.md  LEARNINGS.md
.openclaw/: workspace-state.json
docs/: ADDING_TOOLS.md  ALARM.md  ARCHITECTURE_CURRENT.md  BASELINE_BEHAVIOR.md  BUILD_PLAN_PROGRESS.md  BUILD_PLAN_SPRINTS.md  GERTY_OVERVIEW.md  GERTY_VISION.md  GOOGLE_OAUTH_SETUP.md  IMPROVEMENT_BACKLOG.md  INTENT_ORCHESTRATOR.md  OPENCLAW_DIAGNOSIS.md  OPENCLAW_INTEGRATION.md  RAG_MEMORY.md  TELEGRAM_SETUP.md
docs/archive/: ALARM_STATUS.md  MCP_STATUS.md  README.md  WAKE_WORD_NEXT_STEPS.md  WAKE_WORD_STATUS.md  (+3 more)
frontend/: index.html  package-lock.json  package.json
gerty/: __init__.py  __main__.py  config.py  intent_orchestrator.py  main.py  notifications.py  pipeline.py  security.py  settings.py
memory/: 2026-03-12.md
scripts/: check_google_calendar.py  check_google_docs.py  check_google_drive.py  check_google_gmail.py  check_google_sheets.py  check_openclaw.sh  download_models.sh  generate_synthetic_gerty.py  google_oauth_flow.py  install_desktop.sh  install_gog.sh  launch_gerty.sh  prepare_training_upload.py  proactive-heartbeat.sh  setup-proactive-cron.sh  test_gerty_spellings.py  test_wake_score.py  train_wakeword_local.py
tests/: __init__.py  test_api.py  test_intent_orchestrator.py  test_openclaw.py  test_research.py  test_router.py  test_settings.py  test_tools.py
(+85 files in other folders)
