[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gerty"
version = "0.5.0"
description = "Local AI/LLM voice assistant (Jarvis/Alexa-style)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "W", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
